--- a/paginas/css/estilo.css
+++ b/paginas/css/estilo.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: jujutso;
-    src: url("../fonts/Jujutsu-Kaisen.ttf");
+    src: url("./fonts/Jujutsu-Kaisen.ttf");
 }
 
 body {
